# vpnn-client

./: .clang-format-ignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json.template  DEVELOPMENT.md  README.md  README_RU.md  conanfile.py  version.h.in
.github/actions/apple-install-cert/: action.yml
.github/actions/apple-setup-keychain/: action.yml
.github/actions/apple-setup-provisioning-profile/: action.yml
.github/workflows/: deploy.yml  tag-deploy.yml
client/: CMakeLists.txt  amneziaApplication.cpp  amneziaApplication.h  amnezia_application.cpp  amnezia_application.h  main.cpp  migrations.cpp  resources.qrc  secureQSettings.cpp  secureQSettings.h  secure_qsettings.cpp  settings.cpp  settings.h  utilities.cpp  vpnConnection.cpp  vpnConnection.h  vpnconnection.cpp  vpnconnection.h
client/android/: build.gradle.kts  settings.gradle.kts
client/android/gradle/: libs.versions.toml
client/client_scripts/: mac_installer.sh
client/cmake/: 3rdparty.cmake  android.cmake  ios.cmake  macos.cmake  macos_ne.cmake  sources.cmake
client/configurators/: awg_configurator.cpp  openvpn_configurator.cpp
client/containers/: containers_defs.cpp
client/core/: defs.h  errorstrings.cpp  networkUtilities.cpp
client/core/api/: apiDefs.h  apiUtils.cpp  apiUtils.h
client/core/configurators/: awgConfigurator.cpp  awgConfigurator.h  configuratorBase.cpp  configuratorBase.h  ikev2Configurator.cpp  ikev2Configurator.h  openVpnConfigurator.cpp  openVpnConfigurator.h  wireguardConfigurator.cpp  wireguardConfigurator.h  xrayConfigurator.cpp  xrayConfigurator.h
client/core/controllers/: allowedDnsController.cpp  allowedDnsController.h  appSplitTunnelingController.cpp  appSplitTunnelingController.h  connectionController.cpp  connectionController.h  coreController.cpp  coreController.h  coreSignalHandlers.cpp  coreSignalHandlers.h  gatewayController.cpp  gatewayController.h  ipSplitTunnelingController.cpp  ipSplitTunnelingController.h  serverController.cpp  serversController.cpp  serversController.h  settingsController.cpp  settingsController.h  updateController.cpp  updateController.h
client/core/diagnostics/: telemtDiagnostics.h
client/core/installers/: awgInstaller.cpp  awgInstaller.h  installerBase.cpp  installerBase.h  mtProxyInstaller.cpp  openvpnInstaller.cpp  openvpnInstaller.h  sftpInstaller.cpp  sftpInstaller.h  socks5Installer.cpp  socks5Installer.h  telemtInstaller.cpp  telemtInstaller.h  torInstaller.cpp  torInstaller.h  xrayInstaller.cpp  (+3 more)
client/daemon/: daemon.cpp  daemonlocalserver.cpp  interfaceconfig.cpp  interfaceconfig.h
client/images/: connect_button_animation.json  flagKit.qrc  images.qrc
client/macos/networkextension/: AmneziaVPNNetworkExtension.entitlements  CMakeLists.txt  Info.plist  Info.plist.in
client/mozilla/: localsocketcontroller.cpp
client/protocols/: ikev2_vpn_protocol_windows.h  openvpnprotocol.cpp  protocols_defs.h  wireguardprotocol.cpp  xrayprotocol.cpp
client/server_scripts/: check_server.sh  check_server_is_busy.sh  check_user_in_sudo.sh  install_docker.sh  remove_all_containers.sh  remove_container.sh  serverScripts.qrc
client/sotka/: web_api.cpp  web_api.h
client/tests/: CMakeLists.txt  testAdminSelfHostedExport.cpp  testComplexOperations.cpp  testDefaultServerChange.cpp  testGatewayStacks.cpp  testMultipleImports.cpp  testSelfHostedServerSetup.cpp  testServerEdgeCases.cpp  testServerEdit.cpp  testServersModelSync.cpp  testSettingsSignals.cpp  testSignalOrder.cpp  testUiServersModelAndController.cpp
client/translations/: amneziavpn_ar_EG.ts  amneziavpn_fa_IR.ts  amneziavpn_hi_IN.ts  amneziavpn_my_MM.ts  amneziavpn_ru_RU.ts  amneziavpn_uk_UA.ts  amneziavpn_ur_PK.ts  amneziavpn_zh_CN.ts  sotka_ar_EG.ts  sotka_fa_IR.ts  sotka_hi_IN.ts  sotka_my_MM.ts  sotka_ru_RU.ts  sotka_uk_UA.ts  sotka_ur_PK.ts  sotka_zh_CN.ts  ulta_ar_EG.ts  ulta_fa_IR.ts  ulta_hi_IN.ts  ulta_my_MM.ts  ulta_ru_RU.ts  ulta_uk_UA.ts  ulta_ur_PK.ts  ulta_zh_CN.ts  vpnnaruzhu_ar_EG.ts  vpnnaruzhu_fa_IR.ts  vpnnaruzhu_hi_IN.ts  vpnnaruzhu_my_MM.ts  vpnnaruzhu_ru_RU.ts  vpnnaruzhu_uk_UA.ts  vpnnaruzhu_ur_PK.ts  vpnnaruzhu_zh_CN.ts
client/ui/: macos_util.mm  notificationhandler.cpp  notificationhandler.h  qautostart.cpp  systemtray_notificationhandler.cpp  systemtray_notificationhandler.h
client/vpnnaruzhu/: connectionMode.cpp  connectionMode.h  countriesModel.cpp  countriesModel.h  default_app_config.json  default_config.json  default_country_list.json  downloadController.h  downloader.cpp  downloader.h  vpnnApp.cpp  vpnnApp.h  web_api.cpp  web_api.h
cmake/: CPack.cmake  CPackOptions.cmake  conan_provider.cmake  platform_settings.cmake  recipes_bootstrap.cmake  sign_binaries.cmake  sign_packages.cmake
cmake/util/: codesign.cmake  notarytool.cmake  signtool.cmake
common/logger/: logger.cpp
deploy/: build.bat  build.sh  build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_macos_ne.sh  build_windows.bat  deploy_s3.sh
deploy/installer/: config.cmake
ipc/: ipc.h  ipcserver.cpp
metadata/en-US/: full_description.txt
recipes/amnezia-libxray/: conanfile.py
recipes/amnezia-xray-bindings/: conanfile.py
recipes/awg-android/: conanfile.py
recipes/awg-apple/: conanfile.py
recipes/awg-go/: conanfile.py
recipes/awg-windows/: conanfile.py
recipes/go/: conandata.yml  conanfile.py
recipes/hev-socks5-tunnel/: conanfile.py
recipes/libcap-ng/: conanfile.py
recipes/libssh/: conanfile.py
recipes/openssl/: conanfile.py
recipes/openvpn/: conandata.yml  conanfile.py
recipes/openvpn-pt-android/: conandata.yml  conanfile.py
recipes/openvpnadapter/: conanfile.py
recipes/tap-windows6/: conanfile.py
recipes/tun2socks/: conanfile.py
recipes/v2ray-rules-dat/: conanfile.py
recipes/win-split-tunnel/: conanfile.py
recipes/wintun/: conanfile.py
service/: CMakeLists.txt
service/server/: CMakeLists.txt  amneziavpn-service.rc.in  killswitch.cpp  killswitch.h  localserver.cpp  main.cpp  router_linux.cpp  router_mac.cpp  router_mac.h  router_win.cpp  systemservice.cpp  xray.cpp  xray.h  xray_defs.h
(+460 files in other folders)
